[package]
name = "axum-socketio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
socketioxide = "0.13"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] } 